--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.MovieApp"
         tools:targetApi="31">
         <activity
+            android:name=".activities.ContentDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
@@ -23,10 +26,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.VerticalListActivity"
-            android:parentActivityName=".activities.MainActivity">
-
-        </activity>
+        <activity
+            android:name=".activities.VerticalListActivity"
+            android:parentActivityName=".activities.MainActivity"/>
     </application>
 
 </manifest>
